--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -2,3 +2,4 @@ Classroom Info
 <%= render partial: 'classroom', locals: {classroom: @classroom} %>
 We now want to call out the oldest student in the class:
 <%= render partial: 'students/student', locals: {student: @student} %>
+<% end %>
